--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  kamatanay
 
 # Build settings
 markdown: kramdown
-theme: alembic-jekyll-theme
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-sitemap
   - jekyll-mentions
