--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  kamatanay
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-cayman
+theme: alembic-jekyll-theme
 plugins:
   - jekyll-sitemap
   - jekyll-mentions
@@ -34,8 +34,6 @@ plugins:
   - jekyll-redirect-from
   - jekyll-default-layout
   - jekyll-feed
-  - jekyll-commonmark
-  - jekyll-include-cache
   - jemoji
 highlighter: rouge
 paginate: 10
@@ -69,13 +67,11 @@ social_links: # Appears in sidebar. Set the urls then uncomment and comment out 
 
 
 navigation_header:
-- title: Home
-  url: /
-- title: About Myself
-  url: /about-2
+  Home: "/"
+  About Myself: "/about-2"
 
 sharing_links: # Appear at the bottom of single blog posts, add as desired. The value can be 'true' or the desired button colour
-  Twitter: "#0d94e7"
+  Twitter: "#1DA1F2"
   facebook: "#3B5998"
   Email: true
 
